--- a/css/slutprojekt.css
+++ b/css/slutprojekt.css
@@ -26,30 +26,20 @@ body {
 }
 /* || Slogan */
 
-
-#KnockingDoor {
-  font-size: 30px;
-  font-family: 'montserrat classic', sans-serif;
-  color: white;
-  width: 1px;
-  display: flex; 
-  align-self: center;
-  margin-top: 100px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
+.slogan{
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  padding-top: 100px;
 }
 
-#Opendoor {
-  margin: 20px;
-  font-size: 30px;
+.KnockingDoor {
+  font-size: 60px;
   font-family: 'montserrat classic', sans-serif;
   color: white;
-  width: 30cm;
-  display: flex; 
-  align-self: center;
-  margin-right: auto;
-  margin-left: auto;
+  text-align: center;
+  width: 800px;
+  margin: auto;
 }
 
 /* || affärside */
@@ -92,7 +82,7 @@ font[size="7"] {
   font-size: 4rem;
   text-align: center;
   color: white;
-  text-shadow: 2px 2px 10px black;
+  text-shadow: 2px 2px 10px white;
 }
 
 font[size="6"] {
@@ -154,7 +144,7 @@ div[class="nav"] a {
   font-size: 2rem;
   text-transform: uppercase;
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 div[class="nav"] .search {
@@ -177,7 +167,7 @@ div[class="nav"] .search {
 .search input[type="submit"] {
   flex: 1;
   margin-left: 1rem;
-  background: #333;
+  background: white;
   border: 0;
   color: white;
 }
