--- a/Knockingdoor/css/slutprojekt.css
+++ b/Knockingdoor/css/slutprojekt.css
@@ -111,13 +111,34 @@ position: absolute;
   align-self: left;
   margin-top: 100px;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 225px;
   border-style: solid;
   border-color: white;
   border-width: 3px;
+  position: absolute;
 }
 
 #Theo {
+  text-align: justify;
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+
+.agare {
+  width: 10cm;
+  display: flex; 
+  align-self: left;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: 1034px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+  position: absolute;
+}
+#Vincent{
   text-align: justify;
   margin: 20px;
   font-size: 20px;
