--- a/Knockingdoor/css/slutprojekt.css
+++ b/Knockingdoor/css/slutprojekt.css
@@ -48,6 +48,14 @@ html {
   margin-top: 430px;
 }
 
+.insta4 img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: transparent;
+  margin-top: 430px;
+}
+
 /* || Slogan */
 
 .slogan{
@@ -132,7 +140,7 @@ height: 354px;
   display: flex; 
   margin-top: 50px;
   margin-right: auto;
-  margin-left: 225px;
+  margin-left: 300px;
   border-style: solid;
   border-color: white;
   border-width: 3px;
@@ -151,8 +159,8 @@ height: 354px;
   width: 10cm;
   display: flex; 
   margin-top: 50px;
+  margin-left: 400px;
   margin-right: auto;
-  margin-left: 1034px;
   border-style: solid;
   border-color: white;
   border-width: 3px;
@@ -170,13 +178,14 @@ height: 354px;
 
 .theodor img{
   margin-top: 50px;
-margin-left: 225px;
+margin-left: 300px;
 width: 378px;
 height: 500px;
 }
 
 .virre img{
-  margin-left: 1034px;
+  margin-top: 50px;
+  margin-left: 400px;
 width: 378px;
 height: 500px;
 }
@@ -184,6 +193,64 @@ height: 500px;
 .maincontainer{
   display: flex;
 }
+
+/* || kontakt */
+
+.kontakt {
+  width: 10cm;
+  display: flex; 
+  margin-top: 50px;
+  margin-left: 300px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+  position: absolute;
+}
+
+.kontakt2 {
+  width: 10cm;
+  display: flex; 
+  margin-top: 50px;
+  margin-left: 400px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+  position: absolute;
+}
+
+#theosnummer {
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+
+#vincentsnummer {
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+
+.theokontaktbild img {
+  margin-top: 50px;
+  margin-left: 300px;
+  width: 10cm;
+  height: 500px;
+  }
+
+.vincentkontaktbild img {
+margin-top: 50px;
+margin-left: 400px;
+width: 10cm;
+height: 500px;
+}
+
+.mainkontaktkontainer {
+  display: flex;
+}
+
+
 
 /* || typography */
 
