--- a/Knockingdoor/css/slutprojekt.css
+++ b/Knockingdoor/css/slutprojekt.css
@@ -1,9 +1,4 @@
-/* || General setup */
 
-html, body {
-  margin: 0;
-  padding: 0;
-}
 
 html {
   font-size: 10px;
@@ -12,14 +7,14 @@ html {
 
 
 
+
 /* || logo */
 
-.header img {
-  float: left;
-  width: 100px;
-  height: 100px;
+.header img { 
+  width: 500px;
+  height: 500px;
   background: transparent;
-  margin-top: -7px;
+  margin-left: 320px;
 }
 
 /* || insta */
@@ -37,7 +32,7 @@ html {
   width: 100px;
   height: 100px;
   background: transparent;
-  margin-top: 250px;
+  margin-top: 600px;
 }
 
 .insta3 img {
@@ -73,14 +68,24 @@ html {
   padding-top: 100px;
 }
 
-.KnockingDoor {
+.KnockingDoor17 {
   font-size: 60px;
   font-family: 'montserrat classic', sans-serif;
   color: white;
   text-align: center;
   width: 30cm;
   margin: auto;
-  margin-left: 40px;
+  margin-left: 10px;
+}
+
+.KnockingDoor18 {
+  font-size: 60px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  text-align: center;
+  width: 30cm;
+  margin: auto;
+  margin-left: 10px;
 }
 
 /* || affärside */
@@ -131,15 +136,16 @@ margin-left: 103px;
 margin-right: auto;
 position: absolute;
 }
-/* || sedel */
+
+/* Sedel */
 
 .sedel img {
-margin: auto;
-margin-left: 900px;
-margin-top: 100px;
-width: 828px;
-height: 354px;
-}
+  margin: auto;
+  margin-left: 800px;
+  margin-top: 150px;
+  width: 828px;
+  height: 354px;
+  }
 
 /* || Grundare & Ägare */
 
@@ -285,7 +291,7 @@ height: 600px;
   margin-top: 10px;
   margin-left: 10px;
 width: 400px;
-height: 600px;
+height: 550px;
 }
 
 .starstrumpa img{
@@ -366,107 +372,500 @@ height: 600px;
 }
 /* || typography */
 
-font[size="7"], font[size="6"], font[size="5"] {
-  font-family: 'montserrat classic', sans-serif;
-  color: white;
-}
 
 p, input, li, table, label {
   font-family: 'montserrat classic', sans-serif;
   color: white;
 }
 
-font[size="7"] {
-  font-size: 4rem;
-  text-align: center;
-  color: white;
-  text-shadow: 2px 2px 10px white;
-}
-
-font[size="6"] {
-  font-size: 3rem;
-  text-align: center;
-}
-
-font[size="5"] {
-  font-size: 2.2rem;
-}
 
 p, li, table {
-  font-size: 1.6rem;
-  line-height: 1.5;
+  font-size: 3rem;
+  line-height: 2;
 }
 
-/* || header layout */
+/* || insta */
 
-div[class="nav"], article, footer, .secondary {
-  background-color: #e2d4ca;
+@media (max-width: 420px) {
+.insta img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: transparent;
+  margin-top: 700px;
+}
+
+.insta2 img {
+  float: downleft;
+  width: 100px;
+  height: 100px;
+  background: transparent;
+  margin-top: 600px;
+}
+
+.insta3 img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: transparent;
+  margin-top: 50px;
+}
+
+.insta4 img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: transparent;
+  margin-top: 300px;
+}
+
+.insta5 img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: transparent;
+  margin-top: 50px;
+}
+}
+/* || Slogan */
+@media (max-width: 420px) {
+.slogan{
+  margin: auto;
+  width: 10cm;
+  padding: 10px;
+  padding-top: 50px;
+}
+.KnockingDoor17 {
+  font-size: 35px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  text-align: center;
+  width: 9cm;
+  margin-left: 10px;
+}
+
+.KnockingDoor18 {
+  font-size: 25px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  text-align: center;
+  width: 9cm;
+  margin-left: 10px;
+}
+
+}
+
+/* logo */
+
+@media (max-width: 420px) {
+.header img { 
+  width: 300px;
+  height: 300px;
+  background: transparent;
+  margin-left: 30px;
+}
+}
+/* || affärside */
+
+@media (max-width: 420px) {
+.idea {
+  width: 9cm;
+  margin: auto;
+  display: flex; 
+  align-self: center;
   margin-top: 30px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+}
+
+#info {
+  text-align: justify;
+  margin: 20px;
+  font-size: 25px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+}
+/* || Bli säljare */
+
+@media (max-width: 420px) {
+.fire li {
+  font-size: 25px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  text-align: left;
+  margin-top: 10px;
+  list-style-type: '- ';
+}
+
+.water {
+  font-size: 25px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  text-align: left;
+  margin-top: 10px;
+  text-decoration: underline;
+}
+
+.earth {
+margin-top: 100px;
+margin-left: 25px;
+margin-right: auto;
+position: absolute;
+}
+}
+
+/* sedel */
+
+@media (max-width: 420px) {
+
+  .sedel img {
+    display: none;
+  }
+}
+
+/* || Grundare & Ägare */
+@media (max-width: 420px) {
+.grundare {
+  width: 9cm;
+  display: flex; 
+  margin-top: 50px;
+  margin-right: auto;
+  margin-left: 17px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+ 
+}
+
+#Theo {
+  text-align: justify;
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+
+.agare {
+  width: 9cm;
+  display: flex; 
+  margin-top: 50px;
+  margin-left: 17px;
+  margin-right: auto;
   border-style: solid;
   border-color: white;
   border-width: 3px;
   
 }
-
-article, footer, .secondary {
-  padding: 10px 30px;
+#Vincent{
+  text-align: justify;
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
 }
 
-article {
-  margin-right: 10px;
+.container {
+  display: block;
 }
 
-div[class="nav"] {
-  height: 50px;
-  background-color: #e2d4ca;
-  display: flex;
-  padding: 1% 0;
-  margin-bottom: 10px;
+}
+/* || profilbild */
+@media (max-width: 420px) {
+.theodor img{
+  margin-top: 50px;
+margin-left: 17px;
+width: 9cm;
+height: 450px;
 }
 
-div[class="nav"] ul {
+.virre img{
+  margin-top: 850px;
+margin-left: 17px;
+  width: 9cm;
+  height: 450px;
+
+}
+
+.maincontainer{
+  display: block;
+}
+
+}
+/* || kontakt */
+@media (max-width: 420px) {
+.kontakt {
+  width: 9cm;
+  margin-top: 50px;
+  margin-left: 17px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+}
+
+.kontakt2 {
+  width: 9cm;
+  margin-top: 50px;
+  margin-left: 17px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+}
+
+#theosnummer {
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+
+#vincentsnummer {
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+
+.theokontaktbild img {
+  margin-top: 50px;
+  margin-left: 17px;
+  width: 9cm;
+  height: 420px;
+  }
+
+.vincentkontaktbild img {
+margin-top: 350px;
+margin-left: 17px;
+width: 9cm;
+height: 450px;
+}
+
+.mainkontaktkontainer{
+  display: block;
+}
+
+}
+/* || produkt */
+@media (max-width: 420px) {
+.mona img{
+  margin-top: 50px;
+margin-left: 17px;
+width: 9cm;
+height: 450px;
+}
+
+.monastrumpa img{
+  margin-top: 450px;
+  margin-left: 17px;
+width: 9cm;
+height: 450px;
+}
+
+.guitariststrumpa img{
+  margin-top: 350px;
+  margin-left: 17px;
+width: 9cm;
+height: 450px;
+}
+
+.skrietstrumpa img{
+  margin-top: 180px;
+  margin-left: 10px;
+width: 400px;
+height: 600px;
+}
+
+.starstrumpa img{
+  margin-top: 270px;
+  margin-left: 30px;
+width: 300px;
+height: 600px;
+}
+
+.monaclass {
+  width: 9cm;
+  display: flex; 
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: 17px;
+  border-style: solid;
+  border-color: white;
+  border-width: 3px;
+  position: absolute;
+}
+
+.monalisa {
+  text-align: justify;
+  margin: 20px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  display: flex; 
+  margin-right: auto;
+  margin-left: 17px;
+  text-decoration: underline;
+  margin-top: 1px;
+  font-size: 20px;
+}
+
+.monaside {
+  border-style: solid;
+  border-color: white;
+  border-right: 3px;
+  border-left: 3px;
+  margin-left: 17px;
+  margin-right: auto;
+  width: 5cm;
+  
+}
+
+.monalisa1 {
+  text-align: left;
+  margin: 10px;
+  font-size: 15px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  text-decoration: underline;
+  margin-top: 5px;
+
+}
+
+.konst{
+  text-align: left;
+  margin: 10px;
+  font-size: 15px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+  margin-top: 1px;  
+  width: 20cm;
+}
+
+.produkttext {
+  text-align: justify;
+  margin: 10px;
+  font-size: 20px;
+  font-family: 'montserrat classic', sans-serif;
+  color: white;
+}
+
+.mainprodukt {
+  display: block;
+}
+
+}
+/* || typography */
+
+body {
+  margin: 0;
   padding: 0;
-  list-style-type: none;
-  flex: 2;
+}
+
+.navbar {
   display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  background-image: linear-gradient(#bc9274, #e2d4ca);
+  color: white;
+  font-family: 'montserrat classic', sans-serif;
 }
 
-div[class="nav"] li {
-  display: inline;
-  text-align: center;
-  flex: 1;
-}
-
-div[class="nav"] a {
-  display: inline-block;
-  font-size: 2rem;
-  text-transform: uppercase;
+.brand-title a:link {
+  font-size: 4rem;
+  margin: .5rem;
   text-decoration: none;
   color: white;
 }
 
-div[class="nav"] .search {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  padding: 0 2em;
-}
-
-.search input {
-  font-size: 1.6rem;
-  height: 32px;
-}
-
-.search input[type="search"] {
-  flex: 3;
-}
-
-.search input[type="submit"] {
-  flex: 1;
-  margin-left: 1rem;
-  background: white;
-  border: 0;
+.brand-title a:visited {
+  font-size: 5rem;
+  margin: .5rem;
+  text-decoration: none;
   color: white;
 }
 
+.brand-title a:hover{
+  background-color: #cdbdb2;
+}
+
+.navbar-links {
+  height: 100%;
+}
+
+.navbar-links ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-links li {
+  list-style: none;
+  border: solid 2px white;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.navbar-links li a {
+  display: block;
+  text-decoration: none;
+  color: white;
+  padding: 1rem;
+}
+
+.navbar-links li:hover {
+  background-color: #cdbdb2;
+}
+
+.toggle-button {
+  position: absolute;
+  top: .75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 40px;
+  height: 31px;
+}
+
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+@media (max-width: 420px) {
+  .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .toggle-button {
+      display: flex;
+  }
+
+  .navbar-links {
+      display: none;
+      width: 100%;
+    font-size: 20px;
+  }
+
+  .navbar-links ul {
+      width: 100%;
+      flex-direction: column;
+  }
+
+  .navbar-links ul li {
+      text-align: center;
+  }
+
+  
+ 
+
+  .navbar-links.active {
+      display: flex;
+  }
+}
